@@ -14,7 +14,6 @@ package org.openhab.binding.nuvo.internal;
 
 import static org.openhab.binding.nuvo.internal.NuvoBindingConstants.*;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -42,7 +41,7 @@ import org.osgi.service.component.annotations.Reference;
 @Component(configurationPid = "binding.nuvo", service = ThingHandlerFactory.class)
 public class NuvoHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_AMP);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_AMP);
 
     private final SerialPortManager serialPortManager;
 
